# epiphan-storyboard

./: .audit-saas.yaml  .env.example  .gitignore  .gitleaksignore  BACKLOG.md  CLAUDE.md  Dockerfile.api  GONG_FIREFLIES_SUMMARY.md  LICENSE  PLANNING.md  PRP.md  README.md  TASK.md  demo_cli.py  docker-compose.yml  init.sh  knowledge_cli.py  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt  vercel.json  worker-config.json
.claude/: Backlog.md  PLANNING.md  PROJECT_CONTEXT.md  TASK.md  context.md
.claude/agents/: observer-full.md  observer-lite.md
.claude/commands/: execute-prp.md  generate-prp.md  pipeline-eod.md  pipeline-feature.md  validate.md
.claude/observers/: ARCH.md  QUALITY.md
.claude/rules/: coding.md
PRPs/templates/: prp_base.md
builder/: requirements.txt
docs/: LINEAR_NOTION_CONNECTORS.md  VIDEO_RECORDING_ARCH.md  VIDEO_RECORDING_PRD.md
docs/plans/: 2025-12-04-knowledge-storyboard-integration.md  2025-12-04-persona-resonance-polish.md  2025-12-04-storyboard-demo-design.md  2025-12-04-storyboard-demo-implementation.md  2026-06-19-deterministic-text-layer-design.md
examples/: oauth_flow_example.py
plugins/example_plugin/: __init__.py
scripts/: regen_product_visual_specs.py  smoke_test_transcript.py  visual_audit.py
shared/: __init__.py
shared/agents/: __init__.py  orchestrator.py  schema.py  tools.py
shared/audit/: __init__.py  exporters.py  logger.py  schema.py
shared/config/: __init__.py  settings.py
shared/providers/: __init__.py  anthropic.py  base.py  gemini.py  openrouter.py
sql/: 001_audit_and_leads.sql  002_storyboard_jobs.sql  003_storage_buckets.sql  004_coperniq_knowledge.sql  004_knowledge.sql  005_connectors.sql  005_router_jobs.sql  006_billing.sql  007_demo_pipeline.sql
src/: api.py  audit.py  auth.py  cache.py  circuit_breaker.py  constants.py  cost_optimizer.py  deduplication.py  dlq.py  engine.py  handler.py  health.py  input_validation.py  metering.py  metrics.py  model_catalog.py  priority.py  providers.py  quotas.py  requirements.txt  router.py  shutdown.py  timeout.py  tracing.py  validation.py  webhooks.py
src/agents/: runner.py  schemas.py  state.py
src/billing/: __init__.py  middleware.py  router.py  schemas.py  service.py  stripe_client.py
src/brand/: fonts.py
src/connectors/: README.md  __init__.py  base.py  registry.py
src/connectors/clari/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/close/: __init__.py  client.py  connector.py  transformer.py
src/connectors/fireflies/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/gong/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/google_docs/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/hubspot/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/linear/: __init__.py  client.py  connector.py  schemas.py  transformer.py  webhook.py
src/connectors/loom/: __init__.py  connector.py
src/connectors/miro/: __init__.py  connector.py
src/connectors/notion/: __init__.py  client.py  connector.py  schemas.py  transformer.py
src/connectors/oauth/: README.md  __init__.py  base.py  gong.py  google.py  linear.py  notion.py
src/demo/: _dropdowns.py  router.py
src/knowledge/: __init__.py  base.py  cache.py  close_crm.py  extraction.py  service.py
src/observability/: __init__.py  audit.py
src/router/: __init__.py  api.py  chains.py  classifier.py  router.py  schemas.py  state.py
src/routers/: __init__.py  connectors.py
src/sdk/: __init__.py  client.py  registry.py
src/sdk/security/: __init__.py  approval.py  ssrf.py  timeout.py
src/sdk/testing/: __init__.py  mocks.py
src/storyboard/: README.md  __init__.py  router.py  schemas.py  state.py
src/tools/: __init__.py  base.py  code_run.py  registry.py  sql_query.py  web_fetch.py
src/tools/recording/: __init__.py  browserbase.py  config.py  runway_client.py  schemas.py  screen_capture.py  video_generator.py
src/tools/storyboard/: __init__.py  bdr_brief_generator.py  code_to_storyboard.py  coperniq_presets.py  epiphan_presets.py  gemini_client.py  meeting_recap.py  problem_statements.py  product_visual_specs.py  prompt_builders.py  prompts.py  quality_gate.py  roadmap_to_storyboard.py  scenario_library.py  storage.py  storyboard_layout.py  transcript_compactor.py  transcript_to_scenarios.py  unified_storyboard.py  vertical_surveys.py
src/tools/video/: __init__.py  demo_pipeline_router.py  demo_pipeline_schemas.py  demo_pipeline_state.py  scene_extractor.py  video_analytics.py  video_asset_generator.py  video_generator.py  video_scheduler.py  video_script_generator.py  video_template_manager.py
static/: demo.html
supabase/: config.toml
supabase/migrations/: 20241125000000_initial_schema.sql
tests/agents/: test_runner.py  test_schemas.py  test_state.py
tests/api/: conftest.py  test_connectors.py  test_endpoints.py  test_survey_endpoints.py
tests/billing/: test_router.py  test_schemas.py  test_service.py  test_stripe_client.py
tests/brand/: test_fonts.py
tests/connectors/: test_base.py  test_oauth.py  test_registry.py
tests/connectors/test_clari/: test_client.py  test_connector.py  test_transformer.py
tests/connectors/test_close/: __init__.py  test_connector.py
tests/demo/: test_demo_html_contract.py  test_dropdown_parity.py  test_router.py
tests/integration/: test_full.py  test_plugin_integration.py
tests/knowledge/: __init__.py  test_base.py  test_cache.py  test_extraction.py
tests/observability/: test_audit.py
tests/router/: __init__.py  test_api.py  test_chains.py  test_classifier.py  test_router.py
tests/routers/: test_auto_storyboard.py
tests/scripts/: test_smoke_test.py
tests/sdk/: __init__.py  test_client.py  test_registry.py  test_security.py
tests/storyboard/: test_api_integration.py  test_grounding_integration.py  test_schemas.py  test_state.py
tests/tools/: test_code_run.py  test_registry.py  test_sql_query.py  test_web_fetch.py
(+74 files in other folders)
