[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-ai"
version = "0.1.0"
description = "Multi-provider LLM agent orchestration with ReAct pattern"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Scientia Capital", email = "dev@scientiacapital.io"}
]
keywords = [
    "llm",
    "agent",
    "orchestration",
    "ai",
    "claude",
    "gemini",
    "openrouter",
    "react-pattern"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "redis>=5.0.0",
    "supabase>=2.0.0",
    "google-genai>=1.0.0",
    # Scientia Capital core infrastructure
    "lang-core @ git+https://github.com/ScientiaCapital/lang-core.git",
]

[project.optional-dependencies]
# SDK-only dependencies (for plugin developers)
sdk = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

# LLM providers
anthropic = [
    "anthropic>=0.18.0",
]
google = [
    "google-generativeai>=0.4.0",
]

# All LLM providers
llm = [
    "conductor-ai[anthropic,google]",
]

# Billing/payments
billing = [
    "stripe>=7.0.0",
]

# Development and testing
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
    "respx>=0.21.0",
    "docker>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Full installation (all features)
all = [
    "conductor-ai[sdk,llm,dev]",
]

[project.urls]
Homepage = "https://github.com/ScientiaCapital/conductor-ai"
Repository = "https://github.com/ScientiaCapital/conductor-ai"
Documentation = "https://github.com/ScientiaCapital/conductor-ai#readme"

[project.scripts]
conductor-ai = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.sdk", "src.sdk.security", "src.sdk.testing", "src.tools", "src.agents", "plugins"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src", "plugins"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "builder/",
]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "supabase.*",
    "anthropic.*",
    "google.*",
    "stripe.*",
]
ignore_missing_imports = true
